crates/stackable-versioned-macros/tests/inputs/default/fail/submodule_use_statement.stderr
error: submodules must only define `use` statements
 --> tests/inputs/default/fail/submodule_use_statement.rs:7:13
  |
7 |             struct Foo;
  |             ^^^^^^
